  - Limit reporting of program original air date to programs of type EP (Series Episode) and SH (Show) in Electronic Program Guide (EPG)
  - Allow for Live TV to be streamed from any available storage engine before falling back to using a tuner device directly
  - Remove "DVR stream ring buffer size" advanced option

v3.1.1 (2020.01.08)
  - (Windows) Use a BELOW_NORMAL thread priority for the background task scheduler
  - Remove obsolete MPEG-TS packet filtering implementation when streaming via HTTP
  - Remove "Use Original Air Date timestamp for Recorded TV programs" setting
  - Fix bug preventing recording resume position from being set if recording is in-progress

v3.1.0 (2019.12.23)
  - Revert cURL library to version 7.66.0
  - Fix bug during stream changes that would fail to report the MIME type and realtime indicator of the new stream properly
  - Fix bug that could cause "Live Stream creation failed" errors when rapidly changing channels
  - Fix bug preventing stream read operations from exceeding the "DVR stream read chunk size" setting value
  - Fix bug causing recordings update to trigger twice when "Trigger recording discovery immediately after playback" is enabled
  - Add 5-second delay to application of "Trigger recording discovery immediately after playback" to limit during channel changes
  - Apply "DVR stream read operation minimum size" setting to RTP/UDP streaming operations

v3.0.0 (2019.12.14)
  - Add dependency on libxml2 library 2.9.10
  - Switch to incremental database schema versioning rather than tying to the addon version number
  - Switch to Electronic Program Guide (EPG) XMLTV source data (available to DVR subscribers only)
  - Change "Append repeat indicators to applicable episode names" setting to apply only to programs of type EP/SH
  - Remove "Electronic Program Guide (EPG) Metadata" discovery intervals setting
  - Remove "Trigger guide metadata discovery" PVR Client Specific setting