@@ -51,16 +51,6 @@ SQLITE_EXTENSION_INIT1
 #pragma warning(push, 4)
 
 //---------------------------------------------------------------------------
-// PLATFORM COMPATIBILITY
-//---------------------------------------------------------------------------
-
-// timegm --> _mkgmtime
-//
-#if defined(_WINDOWS) || defined(WINAPI_FAMILY)
-#define timegm _mkgmtime
-#endif
-
-//---------------------------------------------------------------------------
 // FUNCTION PROTOTYPES
 //---------------------------------------------------------------------------
 
