@@ -224,6 +224,11 @@ struct addon_settings {
 	// Flag indicating that a repeat indicator should be appended to episode names
 	bool generate_repeat_indicators;
 
+	// use_airdate_as_recordingdate
+	//
+	// Flag indicating that the original air date should be reported as the recording date
+	bool use_airdate_as_recordingdate;
+
 	// delete_datetime_rules_after
 	//
 	// Amount of time (seconds) after which an expired date/time rule is deleted
@@ -416,6 +421,7 @@ static addon_settings g_settings = {
 	false,					// use_channel_names_from_lineup
 	false,					// disable_recording_categories
 	false,					// generate_repeat_indicators
+	false,					// use_airdate_as_recordingdate
 	86400,					// delete_datetime_rules_after			default = 1 day
 	300, 					// discover_devices_interval;			default = 5 minutes
 	7200,					// discover_episodes_interval			default = 2 hours
@@ -1803,6 +1809,7 @@ ADDON_STATUS ADDON_Create(void* handle, void* props)
 			if(g_addon->GetSetting("use_channel_names_from_lineup", &bvalue)) g_settings.use_channel_names_from_lineup = bvalue;
 			if(g_addon->GetSetting("disable_recording_categories", &bvalue)) g_settings.disable_recording_categories = bvalue;
 			if(g_addon->GetSetting("generate_repeat_indicators", &bvalue)) g_settings.generate_repeat_indicators = bvalue;
+			if(g_addon->GetSetting("use_airdate_as_recordingdate", &bvalue)) g_settings.use_airdate_as_recordingdate = bvalue;
 			if(g_addon->GetSetting("delete_datetime_rules_after_v2", &nvalue)) g_settings.delete_datetime_rules_after = nvalue;
 
 			// Load the discovery interval settings
@@ -2150,6 +2157,19 @@ ADDON_STATUS ADDON_SetSetting(char const* name, void const* value)
 
 			g_settings.generate_repeat_indicators = bvalue;
 			log_notice(__func__, ": setting generate_repeat_indicators changed to ", (bvalue) ? "true" : "false", " -- trigger recording update");
+			g_pvr->TriggerRecordingUpdate();
+		}
+	}
+
+	// use_airdate_as_recordingdate
+	//
+	else if(strcmp(name, "use_airdate_as_recordingdate") == 0) {
+
+		bool bvalue = *reinterpret_cast<bool const*>(value);
+		if(bvalue != g_settings.use_airdate_as_recordingdate) {
+
+			g_settings.use_airdate_as_recordingdate = bvalue;
+			log_notice(__func__, ": setting use_airdate_as_recordingdate changed to ", (bvalue) ? "true" : "false", " -- trigger recording update");
 			g_pvr->TriggerRecordingUpdate();
 		}
 	}
@@ -3267,6 +3287,25 @@ PVR_ERROR GetRecordings(ADDON_HANDLE handle, bool deleted)
 
 			// recordingTime
 			recording.recordingTime = static_cast<time_t>(item.recordingtime);
+			if((item.category != nullptr) && (settings.use_airdate_as_recordingdate) && (item.originalairdate > 0)) {
+
+				// Only apply use_airdate_as_recordindate to items with a program type of "EP" or "SH"
+				if((strcasecmp(item.programtype, "EP") == 0) || (strcasecmp(item.programtype, "SH") == 0)) {
+
+					// The UTC time_t has to have the system timezone offset applied to it before reporting it as
+					// originalairdate is always a date value with no time component
+					struct tm tm { 0 };
+					time_t epoch = static_cast<time_t>(item.originalairdate);
+
+				#if defined(_WINDOWS) || defined(WINAPI_FAMILY)
+					gmtime_s(&tm, &epoch);
+				#else
+					gmtime_r(&epoch, &tm);
+				#endif
+
+					recording.recordingTime = mktime(&tm);
+				}
+			}
 
 			// iDuration
 			recording.iDuration = item.duration;
@@ -4375,8 +4414,11 @@ bool OpenRecordedStream(PVR_RECORDING const& recording)
 
 	try {
 
+		// Pull a database connection out from the connection pool
+		connectionpool::handle dbhandle(g_connpool);
+
 		// Generate the stream URL for the specified channel
-		std::string streamurl = get_recording_stream_url(connectionpool::handle(g_connpool), recording.strRecordingId);
+		std::string streamurl = get_recording_stream_url(dbhandle, recording.strRecordingId);
 		if(streamurl.length() == 0) throw string_exception(__func__, ": unable to determine the URL for specified recording");
 
 		// Pause the scheduler if the user wants that functionality disabled during streaming
@@ -4388,9 +4430,10 @@ bool OpenRecordedStream(PVR_RECORDING const& recording)
 			log_notice(__func__, ": streaming recording '", recording.strTitle, "' via url ", streamurl.c_str());
 			g_pvrstream = httpstream::create(streamurl.c_str(), settings.stream_read_chunk_size);
 
-			// For recorded streams, set the start and end times based on the recording metadata
-			g_stream_starttime = recording.recordingTime;
-			g_stream_endtime = recording.recordingTime + recording.iDuration;
+			// For recorded streams, set the start and end times based on the recording metadata. Don't use the
+			// start time value in PVR_RECORDING; that may have been altered for display purposes
+			g_stream_starttime = get_recording_time(dbhandle, recording.strRecordingId);
+			g_stream_endtime = g_stream_starttime + recording.iDuration;
 
 			// Log some additional information about the stream for diagnostic purposes
 			log_notice(__func__, ": mediatype = ", g_pvrstream->mediatype());
